; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/transicc/extr_transicc.c_GetIT8Val.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/transicc/extr_transicc.c_GetIT8Val.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hIT8in = common dso_local global i32 0, align 4
@CGATSPatch = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"Field '%s' not found\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32)* @GetIT8Val to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetIT8Val(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @hIT8in, align 4
  %10 = load i32, i32* @CGATSPatch, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = call i8* @cmsIT8GetData(i32 %8, i32 %9, i32 %10, i8* %11)
  store i8* %12, i8** %7, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %15, label %18

15:                                               ; preds = %3
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @FatalError(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %16)
  br label %18

18:                                               ; preds = %15, %3
  %19 = load i8*, i8** %7, align 8
  %20 = call i32 @atof(i8* %19)
  %21 = load i32, i32* %6, align 4
  %22 = sdiv i32 %20, %21
  ret i32 %22
}

declare dso_local i8* @cmsIT8GetData(i32, i32, i32, i8*) #1

declare dso_local i32 @FatalError(i8*, i8*) #1

declare dso_local i32 @atof(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
